@@ -1,9 +1,14 @@
 package dev.langchain4j.rag.content.retriever.azure.search;
 
+import static dev.langchain4j.internal.Utils.isNullOrEmpty;
+import static dev.langchain4j.internal.Utils.randomUUID;
+import static dev.langchain4j.internal.ValidationUtils.ensureNotNull;
+import static dev.langchain4j.internal.ValidationUtils.ensureTrue;
+import static java.util.Collections.singletonList;
+
 import com.azure.core.credential.AzureKeyCredential;
 import com.azure.core.credential.TokenCredential;
 import com.azure.core.util.Context;
-import com.azure.search.documents.SearchDocument;
 import com.azure.search.documents.indexes.models.SearchIndex;
 import com.azure.search.documents.models.*;
 import com.azure.search.documents.util.SearchPagedIterable;
@@ -11,25 +16,21 @@ import dev.langchain4j.data.embedding.Embedding;
 import dev.langchain4j.data.segment.TextSegment;
 import dev.langchain4j.model.embedding.EmbeddingModel;
 import dev.langchain4j.rag.content.Content;
+import dev.langchain4j.rag.content.ContentMetadata;
 import dev.langchain4j.rag.content.retriever.ContentRetriever;
 import dev.langchain4j.rag.content.retriever.EmbeddingStoreContentRetriever;
 import dev.langchain4j.rag.query.Query;
 import dev.langchain4j.store.embedding.EmbeddingMatch;
+import dev.langchain4j.store.embedding.EmbeddingSearchRequest;
 import dev.langchain4j.store.embedding.azure.search.AbstractAzureAiSearchEmbeddingStore;
 import dev.langchain4j.store.embedding.azure.search.AzureAiSearchRuntimeException;
 import dev.langchain4j.store.embedding.azure.search.Document;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
+import dev.langchain4j.store.embedding.filter.Filter;
 import java.util.ArrayList;
 import java.util.List;
-
-import static dev.langchain4j.internal.Utils.isNullOrEmpty;
-import static dev.langchain4j.internal.Utils.randomUUID;
-import static dev.langchain4j.internal.ValidationUtils.ensureNotNull;
-import static dev.langchain4j.internal.ValidationUtils.ensureTrue;
-import static java.util.Collections.singletonList;
-import static java.util.stream.Collectors.toList;
+import java.util.Map;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * Represents Azure AI Search Service as a {@link ContentRetriever}.
@@ -58,20 +59,32 @@ public class AzureAiSearchContentRetriever extends AbstractAzureAiSearchEmbeddin
     private final AzureAiSearchQueryType azureAiSearchQueryType;
 
     private final int maxResults;
+
     private final double minScore;
 
-    public AzureAiSearchContentRetriever(String endpoint,
-                                         AzureKeyCredential keyCredential,
-                                         TokenCredential tokenCredential,
-                                         boolean createOrUpdateIndex,
-                                         int dimensions,
-                                         SearchIndex index,
-                                         EmbeddingModel embeddingModel,
-                                         int maxResults,
-                                         double minScore,
-                                         AzureAiSearchQueryType azureAiSearchQueryType) {
+    private final Filter filter;
+
+    private final String searchFilter;
+
+    public AzureAiSearchContentRetriever(
+            String endpoint,
+            AzureKeyCredential keyCredential,
+            TokenCredential tokenCredential,
+            boolean createOrUpdateIndex,
+            int dimensions,
+            SearchIndex index,
+            String indexName,
+            EmbeddingModel embeddingModel,
+            int maxResults,
+            double minScore,
+            AzureAiSearchQueryType azureAiSearchQueryType,
+            AzureAiSearchFilterMapper filterMapper,
+            Filter filter) {
         ensureNotNull(endpoint, "endpoint");
-        ensureTrue((keyCredential != null && tokenCredential == null) || (keyCredential == null && tokenCredential != null), "either keyCredential or tokenCredential must be set");
+        ensureTrue(
+                (keyCredential != null && tokenCredential == null)
+                        || (keyCredential == null && tokenCredential != null),
+                "either keyCredential or tokenCredential must be set");
 
         if (AzureAiSearchQueryType.FULL_TEXT.equals(azureAiSearchQueryType)) {
             // Full-text search doesn't use embeddings, so dimensions must be 0
@@ -79,28 +92,42 @@ public class AzureAiSearchContentRetriever extends AbstractAzureAiSearchEmbeddin
         } else {
             ensureNotNull(embeddingModel, "embeddingModel");
             if (index == null) {
-                ensureTrue(dimensions >= 2 && dimensions <= 3072, "dimensions must be set to a positive, non-zero integer between 2 and 3072");
+                ensureTrue(
+                        dimensions >= 2 && dimensions <= 3072,
+                        "dimensions must be set to a positive, non-zero integer between 2 and 3072");
             } else {
                 ensureTrue(dimensions == 0, "for custom index, dimensions must be 0");
             }
         }
         if (keyCredential == null) {
             if (index == null) {
-                this.initialize(endpoint, null, tokenCredential, createOrUpdateIndex, dimensions, null);
+                this.initialize(
+                        endpoint,
+                        null,
+                        tokenCredential,
+                        createOrUpdateIndex,
+                        dimensions,
+                        null,
+                        indexName,
+                        filterMapper);
             } else {
-                this.initialize(endpoint, null, tokenCredential, createOrUpdateIndex, 0, index);
+                this.initialize(
+                        endpoint, null, tokenCredential, createOrUpdateIndex, 0, index, indexName, filterMapper);
             }
         } else {
             if (index == null) {
-                this.initialize(endpoint, keyCredential, null, createOrUpdateIndex, dimensions, null);
+                this.initialize(
+                        endpoint, keyCredential, null, createOrUpdateIndex, dimensions, null, indexName, filterMapper);
             } else {
-                this.initialize(endpoint, keyCredential, null, createOrUpdateIndex, 0, index);
+                this.initialize(endpoint, keyCredential, null, createOrUpdateIndex, 0, index, indexName, filterMapper);
             }
         }
         this.embeddingModel = embeddingModel;
         this.azureAiSearchQueryType = azureAiSearchQueryType;
         this.maxResults = maxResults;
         this.minScore = minScore;
+        this.filter = filter;
+        this.searchFilter = this.filterMapper.map(filter);
     }
 
     /**
@@ -138,10 +165,14 @@ public class AzureAiSearchContentRetriever extends AbstractAzureAiSearchEmbeddin
             Document document = new Document();
             document.setId(randomUUID());
             document.setContent(segment.text());
+            Document.Metadata metadata = new Document.Metadata();
+            metadata.setAttributes(segment.metadata());
+            document.setMetadata(metadata);
             documents.add(document);
         }
 
-        List<IndexingResult> indexingResults = searchClient.uploadDocuments(documents).getResults();
+        List<IndexingResult> indexingResults =
+                searchClient.uploadDocuments(documents).getResults();
         for (IndexingResult indexingResult : indexingResults) {
             if (!indexingResult.isSucceeded()) {
                 throw new AzureAiSearchRuntimeException("Failed to add content: " + indexingResult.getErrorMessage());
@@ -155,11 +186,22 @@ public class AzureAiSearchContentRetriever extends AbstractAzureAiSearchEmbeddin
     public List<Content> retrieve(Query query) {
         if (azureAiSearchQueryType == AzureAiSearchQueryType.VECTOR) {
             Embedding referenceEmbedding = embeddingModel.embed(query.text()).content();
-            List<EmbeddingMatch<TextSegment>> searchResult = super.findRelevant(referenceEmbedding, maxResults, minScore);
+            EmbeddingSearchRequest request = EmbeddingSearchRequest.builder()
+                    .queryEmbedding(referenceEmbedding)
+                    .maxResults(maxResults)
+                    .minScore(minScore)
+                    .filter(filter)
+                    .build();
+
+            List<EmbeddingMatch<TextSegment>> searchResult =
+                    super.search(request).matches();
             return searchResult.stream()
-                    .map(EmbeddingMatch::embedded)
-                    .map(Content::from)
-                    .collect(toList());
+                    .map(embeddingMatch -> Content.from(
+                            embeddingMatch.embedded(),
+                            Map.of(
+                                    ContentMetadata.SCORE, embeddingMatch.score(),
+                                    ContentMetadata.EMBEDDING_ID, embeddingMatch.embeddingId())))
+                    .toList();
         } else if (azureAiSearchQueryType == AzureAiSearchQueryType.FULL_TEXT) {
             String content = query.text();
             return findRelevantWithFullText(content, maxResults, minScore);
@@ -177,94 +219,65 @@ public class AzureAiSearchContentRetriever extends AbstractAzureAiSearchEmbeddin
     }
 
     private List<Content> findRelevantWithFullText(String content, int maxResults, double minScore) {
-        SearchPagedIterable searchResults =
-                searchClient.search(content,
-                        new SearchOptions()
-                                .setTop(maxResults),
-                        Context.NONE);
+        SearchPagedIterable searchResults = searchClient.search(
+                content, new SearchOptions().setTop(maxResults).setFilter(searchFilter), Context.NONE);
 
         return mapResultsToContentList(searchResults, AzureAiSearchQueryType.FULL_TEXT, minScore);
     }
 
-    private List<Content> findRelevantWithHybrid(Embedding referenceEmbedding, String content, int maxResults, double minScore) {
+    private List<Content> findRelevantWithHybrid(
+            Embedding referenceEmbedding, String content, int maxResults, double minScore) {
         List<Float> vector = referenceEmbedding.vectorAsList();
 
         VectorizedQuery vectorizedQuery = new VectorizedQuery(vector)
                 .setFields(DEFAULT_FIELD_CONTENT_VECTOR)
                 .setKNearestNeighborsCount(maxResults);
 
-        SearchPagedIterable searchResults =
-                searchClient.search(content,
-                        new SearchOptions()
-                                .setVectorSearchOptions(new VectorSearchOptions().setQueries(vectorizedQuery))
-                                .setTop(maxResults),
-                        Context.NONE);
+        SearchPagedIterable searchResults = searchClient.search(
+                content,
+                new SearchOptions()
+                        .setVectorSearchOptions(new VectorSearchOptions().setQueries(vectorizedQuery))
+                        .setTop(maxResults)
+                        .setFilter(searchFilter),
+                Context.NONE);
 
         return mapResultsToContentList(searchResults, AzureAiSearchQueryType.HYBRID, minScore);
     }
 
-    private List<Content> findRelevantWithHybridAndReranking(Embedding referenceEmbedding, String content, int maxResults, double minScore) {
+    private List<Content> findRelevantWithHybridAndReranking(
+            Embedding referenceEmbedding, String content, int maxResults, double minScore) {
         List<Float> vector = referenceEmbedding.vectorAsList();
 
         VectorizedQuery vectorizedQuery = new VectorizedQuery(vector)
                 .setFields(DEFAULT_FIELD_CONTENT_VECTOR)
                 .setKNearestNeighborsCount(maxResults);
 
-        SearchPagedIterable searchResults =
-                searchClient.search(content,
-                        new SearchOptions()
-                                .setVectorSearchOptions(new VectorSearchOptions().setQueries(vectorizedQuery))
-                                .setSemanticSearchOptions(new SemanticSearchOptions().setSemanticConfigurationName(SEMANTIC_SEARCH_CONFIG_NAME))
-                                .setQueryType(com.azure.search.documents.models.QueryType.SEMANTIC)
-                                .setTop(maxResults),
-                        Context.NONE);
+        SearchPagedIterable searchResults = searchClient.search(
+                content,
+                new SearchOptions()
+                        .setVectorSearchOptions(new VectorSearchOptions().setQueries(vectorizedQuery))
+                        .setSemanticSearchOptions(
+                                new SemanticSearchOptions().setSemanticConfigurationName(SEMANTIC_SEARCH_CONFIG_NAME))
+                        .setQueryType(com.azure.search.documents.models.QueryType.SEMANTIC)
+                        .setTop(maxResults)
+                        .setFilter(searchFilter),
+                Context.NONE);
 
         return mapResultsToContentList(searchResults, AzureAiSearchQueryType.HYBRID_WITH_RERANKING, minScore);
     }
 
-    private List<Content> mapResultsToContentList(SearchPagedIterable searchResults, AzureAiSearchQueryType azureAiSearchQueryType, double minScore) {
+    private List<Content> mapResultsToContentList(
+            SearchPagedIterable searchResults, AzureAiSearchQueryType azureAiSearchQueryType, double minScore) {
         List<Content> result = new ArrayList<>();
-        for (SearchResult searchResult : searchResults) {
-            double score = fromAzureScoreToRelevanceScore(searchResult, azureAiSearchQueryType);
-            if (score < minScore) {
-                continue;
-            }
-            SearchDocument searchDocument = searchResult.getDocument(SearchDocument.class);
-            String embeddedContent = (String) searchDocument.get(DEFAULT_FIELD_CONTENT);
-            Content content = Content.from(embeddedContent);
+        getEmbeddingMatches(searchResults, minScore, azureAiSearchQueryType).forEach(embeddingMatch -> {
+            Content content = Content.from(
+                    embeddingMatch.embedded(),
+                    Map.of(
+                            ContentMetadata.SCORE, embeddingMatch.score(),
+                            ContentMetadata.EMBEDDING_ID, embeddingMatch.embeddingId()));
             result.add(content);
-        }
+        });
         return result;
-    }
-
-    /**
-     * Calculates LangChain4j's RelevanceScore from Azure AI Search's score, for the 4 types of search.
-     */
-    static double fromAzureScoreToRelevanceScore(SearchResult searchResult, AzureAiSearchQueryType azureAiSearchQueryType) {
-        if (azureAiSearchQueryType == AzureAiSearchQueryType.VECTOR) {
-            // Calculates LangChain4j's RelevanceScore from Azure AI Search's score.
-
-            //  Score in Azure AI Search is transformed into a cosine similarity as described here:
-            // https://learn.microsoft.com/en-us/azure/search/vector-search-ranking#scores-in-a-vector-search-results
-
-            // RelevanceScore in LangChain4j is a derivative of cosine similarity,
-            // but it compresses it into 0..1 range (instead of -1..1) for ease of use.
-            double score = searchResult.getScore();
-            return AbstractAzureAiSearchEmbeddingStore.fromAzureScoreToRelevanceScore(score);
-        } else if (azureAiSearchQueryType == AzureAiSearchQueryType.FULL_TEXT) {
-            // Search score is into 0..1 range already
-            return searchResult.getScore();
-        } else if (azureAiSearchQueryType == AzureAiSearchQueryType.HYBRID) {
-            // Search score is into 0..1 range already
-            return searchResult.getScore();
-        } else if (azureAiSearchQueryType == AzureAiSearchQueryType.HYBRID_WITH_RERANKING) {
-            // Re-ranker score is into 0..4 range, so we need to divide the re-reranker score by 4 to fit in the 0..1 range.
-            // The re-ranker score is a separate result from the original search score.
-            // See https://azuresdkdocs.blob.core.windows.net/$web/java/azure-search-documents/11.6.2/com/azure/search/documents/models/SearchResult.html#getSemanticSearch()
-            return searchResult.getSemanticSearch().getRerankerScore() / 4.0;
-        } else {
-            throw new AzureAiSearchRuntimeException("Unknown Azure AI Search Query Type: " + azureAiSearchQueryType);
-        }
     }
 
     public static Builder builder() {
@@ -285,6 +298,8 @@ public class AzureAiSearchContentRetriever extends AbstractAzureAiSearchEmbeddin
 
         private SearchIndex index;
 
+        private String indexName;
+
         private EmbeddingModel embeddingModel;
 
         private int maxResults = EmbeddingStoreContentRetriever.DEFAULT_MAX_RESULTS.apply(null);
@@ -292,6 +307,10 @@ public class AzureAiSearchContentRetriever extends AbstractAzureAiSearchEmbeddin
         private double minScore = EmbeddingStoreContentRetriever.DEFAULT_MIN_SCORE.apply(null);
 
         private AzureAiSearchQueryType azureAiSearchQueryType;
+
+        private Filter filter;
+
+        private AzureAiSearchFilterMapper filterMapper;
 
         /**
          * Sets the Azure AI Search endpoint. This is a mandatory parameter.
@@ -362,6 +381,17 @@ public class AzureAiSearchContentRetriever extends AbstractAzureAiSearchEmbeddin
         }
 
         /**
+         * If no index is provided, set the name of the default index to be used.
+         *
+         * @param indexName The index name to be used.
+         * @return builder
+         */
+        public Builder indexName(String indexName) {
+            this.indexName = indexName;
+            return this;
+        }
+
+        /**
          * Sets the Embedding Model.
          *
          * @param embeddingModel The Embedding Model.
@@ -406,9 +436,43 @@ public class AzureAiSearchContentRetriever extends AbstractAzureAiSearchEmbeddin
             return this;
         }
 
+        /**
+         * Sets the filter to be applied to the search query.
+         *
+         * @param filter The filter to be applied to the search query.
+         * @return builder
+         */
+        public Builder filter(Filter filter) {
+            this.filter = filter;
+            return this;
+        }
+
+        /**
+         * Sets the filter mapper to be used to map {@link Filter} objects to Azure AI Search filter strings.
+         *
+         * @param filterMapper The filter mapper to be used to map {@link Filter} objects to Azure AI Search filter strings.
+         * @return builder
+         */
+        public Builder filterMapper(AzureAiSearchFilterMapper filterMapper) {
+            this.filterMapper = filterMapper;
+            return this;
+        }
+
         public AzureAiSearchContentRetriever build() {
-            return new AzureAiSearchContentRetriever(endpoint, keyCredential, tokenCredential, createOrUpdateIndex, dimensions, index,
-                    embeddingModel, maxResults, minScore, azureAiSearchQueryType);
+            return new AzureAiSearchContentRetriever(
+                    endpoint,
+                    keyCredential,
+                    tokenCredential,
+                    createOrUpdateIndex,
+                    dimensions,
+                    index,
+                    indexName,
+                    embeddingModel,
+                    maxResults,
+                    minScore,
+                    azureAiSearchQueryType,
+                    filterMapper,
+                    filter);
         }
     }
 }
